Navbar + footer added. Profile settings page skeleton added.

--- a/client/footer.html
+++ b/client/footer.html
@@ -1,10 +1,15 @@
 <template name="footer">
-  <div id="footer">
-    <div class="container">
-      <hr>
-        <p>
-          Boilerplate App for Meteor using UserAccounts packages :-)
-        </p>
+
+    <div id="footer">
+        <div class="container text-center">
+            <div class="row">
+                <hr />
+                <div class="col-sm-4">Created by pannuhuone.pro</div>
+                <!-- <div class="col-sm-4 col-sm-offset-4">Powered by Meteor</div> -->
+                <div class="col-sm-4 col-sm-offset-4"><a href="http://meteor.com" target="_blank"><img src="/imgs/meteor2.png" class="img-responsive center-block" alt="Meteor" width="25" height="25"></a></div>
+            </div>
+            <br>
+        </div>
     </div>
-  </div>
+
 </template>
