--- a/client/nav.html
+++ b/client/nav.html
@@ -1,34 +1,60 @@
 <template name="nav">
-  <nav class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class=container>
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-8">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <span class="navbar-brand">
-            <img alt="UserAccounts" width="25" height="25" src="/imgs/ua-logo.png">
-          </span>
+    <nav id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Brand</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li class="{{isActiveRoute regex='home'}}"><a href="{{pathFor 'home'}}">Home</a></li>
+                    <li class="{{isActiveRoute regex='private'}}"><a href="{{pathFor 'private'}}">Private</a></li>
+                    <li class="dropdown">
+                        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Messages <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Inbox</a></li>
+                            <li><a href="#">Drafts</a></li>
+                            <li><a href="#">Sent Items</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Trash</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {{#if currentUser}}
+                        {{#if isAdmin}}
+                            <li class="dropdown">
+                                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Admin <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Dashboard</a></li>
+                                    <li><a href="#">Users</a></li>
+                                    <li><a href="#">Action 1</a></li>
+                                </ul>
+                            </li>
+                        {{/if}}
+                        <li class="dropdown">
+                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Profile <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Link 1</a></li>
+                                <li><a href="#">Link 2</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{{pathFor 'profile'}}">Settings</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/sign-out">Log out</a></li>
+                    {{else}}
+                        <li><a href="/sign-in">Log in</a></li>
+                        <li><a href="/sign-up">Sign up</a></li>
+                    {{/if}}
+                </ul>
+            </div><!-- /.navbar-collapse -->
         </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8">
-            <ul class="nav navbar-nav">
-                <li class="{{isActiveRoute regex='home'}}"><a href="{{pathFor 'home'}}">Home</a></li>
-                <li class="{{isActiveRoute regex='private'}}"><a href="{{pathFor 'private'}}">Private</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {{#if currentUser}}
-                    <li><a href="/sign-out">Log out</a></li>
-                {{else}}
-                    <li><a href="/sign-in">Log in</a></li>
-                    <li><a href="/sign-up">Sign up</a></li>
-                {{/if}}
-            </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
 </template>
